; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeShell.c_vnodeCleanUpShell.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeShell.c_vnodeCleanUpShell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pShellServer = common dso_local global i64 0, align 8
@shellList = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vnodeCleanUpShell() #0 {
  %1 = load i64, i64* @pShellServer, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* @pShellServer, align 8
  %5 = call i32 @taosCloseRpc(i64 %4)
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32, i32* @shellList, align 4
  %8 = call i32 @tfree(i32 %7)
  ret void
}

declare dso_local i32 @taosCloseRpc(i64) #1

declare dso_local i32 @tfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
